Changed radio button size for sets, fixed workout headers vertical alignment

--- a/css/app.css
+++ b/css/app.css
@@ -82,8 +82,8 @@ th, td, tr, .displayTable, #workoutTable {
 }
 
 .setRadioBtns {
-	transform: scale(4);
-	margin: 2px 20px 12px 20px;
+	transform: scale(3);
+	margin: 10px 12px 12px;
 
 }
 
